# JCM_Augmentation

./: .gitignore  README.md  pyproject.toml
data/: data_val.csv
data/00_raw/: JCM_original.csv  data_train.csv
data/01_ground_truth/: JCM_random_1000_sample.csv
data/01_raw/: data_test.csv
data/02_prepared_for_eval/: A_evaluation.csv  B_evaluation.csv  C_evaluation.csv  JCM_for_evaluation.csv  candidates_contextual_ok.csv  target_B.csv  target_C.csv
data/03_merged_results/: JCM_MERGED_EVALUATIONS.csv
data/03_model_selection/: ambiguous_sentences_random_10.csv
data/04_ambiguity_detection/: JCM_random_1000_sample_evaluated.csv  gt_evaluation_report.txt  metrics_llmjp.txt
data/04_method_llm_check/: JCM_random_1000_sample_evaluated.csv
data/99others/: old_JCM_original.csv
original_data/: vocabulary_pools.json
src/: augment_data.py  combine_data.py  extract_vocabulary.py  llm_helper.py  merge_evaluations.py  moderation_filtering.py  prepare_jcm_data.py  random_sampling_1000.py
src/00_original_data/: combine_data.py
src/01_preprocessing/: random_sampling_1000.py  random_sampling_20000.py
src/02_moderation_exp/: moderation_filtering.py
src/03_model_selection/: augment_jcm_test.py  eval_zeroshot_jcm.py  run_benchmark.sh
src/04_ambiguity_detection/: 01_run_classification_experiment.py  02_run_classification_experiment.py  debug.py  merge_gt_evaluations.py  reevaluate_all.py  run_classification_experiment.py  run_scoring_experiment.py  run_stepwise_experiment.py  split_confusion_matrix_results.py
src/05_context_addition/: finalize_results.py  (+4 more)
(+231 files in other folders)
